[metadata]
name = international-bond-system
version = 1.0.0
description = A comprehensive system for international bond relative value analysis and trading
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/international-bond/bond-system
author = International Bond System Team
author_email = contact@internationalbond.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    Topic :: Office/Business :: Financial :: Investment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
* = *.yaml, *.yml, *.json, *.csv, *.txt

[options.entry_points]
console_scripts =
    international-bond = main:main
    bond-system = main:main
    bond-analyzer = main:analyze_mode
    bond-trader = main:trading_mode

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    E402,  # module level import not at top of file
    F401,  # imported but unused
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info,
    .pytest_cache,
    .mypy_cache,
    tests/fixtures/*,
per-file-ignores =
    __init__.py:F401
    tests/*:S101,D103
max-complexity = 10
docstring-convention = google

# Wheel configuration
[bdist_wheel]
universal = 0

# Aliases for common commands
[aliases]
test = pytest